<resources>
    <string name="app_name">Nuphar</string>
    <string name="nuphar_login">NUPHAR - LOGIN</string>
    <string name="nuphar_register">NUPHAR - REGISTER</string>
    <string name="e_mail">E-MAIL</string>
    <string name="password">PASSWORD</string>
    <string name="name_surname">NAME SURNAME</string>
    <string name="country">COUNTRY</string>
    <string name="btn_join_now">JOIN NOW</string>
    <string name="message">MESSAGE</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
</resources>