<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bg_curved_edge_bottom"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nuphar_login"
            android:textColor="@color/title_color"
            android:textSize="@dimen/title_size" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_space_size"
            android:background="@drawable/bg_edittext"
            android:hint="@string/e_mail"
            android:textColorHint="@color/button_hint_text_color"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:textColorHint="@color/button_hint_text_color"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_space_size"
            android:background="@drawable/bg_edittext"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:clickable="true"
            android:textColor="@color/button_text_color"
            android:gravity="center"
            android:text="@string/btn_login"
            android:textSize="@dimen/button_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/item_space_size"
            android:text="or"
            android:textColor="@color/green_1"
            android:textSize="@dimen/button_text_size" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:clickable="true"
            android:textColor="@color/button_text_color"
            android:gravity="center"
            android:text="@string/btn_register"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>