<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingTop="@dimen/activity_main_content_vertical_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_space_size"
                android:background="@drawable/bg_edittext"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/button_hint_text_color" />

            <EditText
                android:id="@+id/et_name_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_space_size"
                android:background="@drawable/bg_edittext"
                android:hint="@string/name_surname"
                android:inputType="text"
                android:textColorHint="@color/button_hint_text_color" />

            <EditText
                android:id="@+id/et_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_space_size"
                android:background="@drawable/bg_edittext"
                android:hint="@string/country"
                android:inputType="text"
                android:textColorHint="@color/button_hint_text_color" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_space_size"
                android:background="@drawable/bg_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/button_hint_text_color" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/btn_register"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bg_curved_edge_bottom"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleX="1.14"
            android:scaleY="1.14"
            android:src="@drawable/logo" />

        <FrameLayout
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_back_24dp" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.8"
            android:text="@string/nuphar_register"
            android:textColor="@color/title_color"
            android:textSize="@dimen/title_size" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>